fixed time check null